WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215029
Launch time regression due to EndowmentStateTracker initialization in WebPageProxy constructor
https://bugs.webkit.org/show_bug.cgi?id=215029
Summary
Launch time regression due to EndowmentStateTracker initialization in WebPage...
Chris Dumez
Reported
2020-07-31 13:02:44 PDT
Launch time regression due to EndowmentStateTracker initialization in WebPageProxy constructor.
Attachments
Patch
(13.82 KB, patch)
2020-07-31 13:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.84 KB, patch)
2020-07-31 14:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-07-31 13:02:57 PDT
<
rdar://problem/66362333
>
Chris Dumez
Comment 2
2020-07-31 13:19:26 PDT
Created
attachment 405732
[details]
Patch
Geoffrey Garen
Comment 3
2020-07-31 14:37:20 PDT
Comment on
attachment 405732
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=405732&action=review
r=me
> Source/WebKit/ChangeLog:12 > + 1. We only need the EndowmentStateTracker to monitor is the app is user-facing or not, so that we can
is => if
Chris Dumez
Comment 4
2020-07-31 14:51:37 PDT
Created
attachment 405743
[details]
Patch
EWS
Comment 5
2020-07-31 15:23:57 PDT
Committed
r265163
: <
https://trac.webkit.org/changeset/265163
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405743
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug